qtscxml/tests/auto/parser/data/emptyScript.scxml.errors
:/tst_parser/data/emptyScript.scxml:5:20: error: neither src nor any content has been given in the script tag